css issue on iOS

--- a/output/dev/index.css
+++ b/output/dev/index.css
@@ -104,6 +104,6 @@ calcite-action-bar {
   min-width: 50px;
 }
 
-.container {
+:host > .content-container {
   height: 100%;
 }
